classifier V2 and webapp

--- a/Table.ipynb
+++ b/Table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,6 +665,186 @@
    "source": [
     "cb_software_reddit.to_csv(\"cb_reddit\", sep='\\t')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cb_software_reddit = pd.read_csv('cb_software_reddit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>funding_total_usd</th>\n",
+       "      <th>status</th>\n",
+       "      <th>state_code</th>\n",
+       "      <th>city</th>\n",
+       "      <th>funding_rounds</th>\n",
+       "      <th>num_investers</th>\n",
+       "      <th>num_reddit</th>\n",
+       "      <th>sentiment_reddit</th>\n",
+       "      <th>outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1010data</td>\n",
+       "      <td>35000000</td>\n",
+       "      <td>operating</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not_Success</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>121nexus</td>\n",
+       "      <td>719000</td>\n",
+       "      <td>operating</td>\n",
+       "      <td>RI</td>\n",
+       "      <td>Providence</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not_Success</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>15Five</td>\n",
+       "      <td>1200000</td>\n",
+       "      <td>operating</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not_Success</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>170 Systems</td>\n",
+       "      <td>14000000</td>\n",
+       "      <td>acquired</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>Bedford</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Success</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>24PageBooks</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>closed</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Rochester</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not_Success</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0 company_name funding_total_usd     status state_code  \\\n",
+       "0           0     1010data          35000000  operating         NY   \n",
+       "1           1     121nexus            719000  operating         RI   \n",
+       "2           2       15Five           1200000  operating         CA   \n",
+       "3           3  170 Systems          14000000   acquired         MA   \n",
+       "4           4  24PageBooks               NaN     closed         NY   \n",
+       "\n",
+       "            city  funding_rounds  num_investers  num_reddit sentiment_reddit  \\\n",
+       "0       New York               1              1           0              NaN   \n",
+       "1     Providence               4              5           0              NaN   \n",
+       "2  San Francisco               2              8           0              NaN   \n",
+       "3        Bedford               1              1           0              NaN   \n",
+       "4      Rochester               1              1           0              NaN   \n",
+       "\n",
+       "       outcome  \n",
+       "0  Not_Success  \n",
+       "1  Not_Success  \n",
+       "2  Not_Success  \n",
+       "3      Success  \n",
+       "4  Not_Success  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cb_software_reddit.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/xintongchen/Downloads/Insigth_xc'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
