first round analysis on new 2013 data

--- a/classifier1.ipynb
+++ b/classifier1.ipynb
@@ -435,7 +435,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "X.head()"
+   ]
   },
   {
    "cell_type": "code",
